--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,7 @@
 name = "NodeDynamicsDemo"
 uuid = "9e0ea011-8e0f-4cd4-a69d-bb41ba97c1be"
 authors = ["Tasku <topi.rasku@live.fi>"]
-version = "0.1.0"
+version = "0.2.0"
+
+[deps]
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
