--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,8 @@
 name = "NodeDynamicsDemo"
 uuid = "9e0ea011-8e0f-4cd4-a69d-bb41ba97c1be"
 authors = ["Tasku <topi.rasku@live.fi>"]
-version = "0.2.1"
+version = "0.3.0"
 
 [deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
